--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-mock-store": "^1.5.4",
+    "use-resize-observer": "^9.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
